--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.6.0 <4.0.0'
+  flutter: '>=3.27.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,10 +31,67 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  # Utilities
+  flutter_dotenv: ^5.1.0
+  logger: ^2.5.0
+  equatable: ^2.0.5
+
+  # Network
+  dio: ^5.7.0
+  pretty_dio_logger: ^1.4.0
+  connectivity_plus: ^6.0.0
+
+  # Routing
+  go_router: ^14.6.2
+
+  # State Management
+  flutter_riverpod: ^2.6.1
+
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.3
+  firebase_storage: ^12.3.4
+  cloud_firestore: ^5.5.0
+  cloud_functions: ^5.1.3
+  google_sign_in: ^6.2.2
+
+  # Local Database (removed for now)
+  # isar: ^3.1.0+1
+  # isar_flutter_libs: ^3.1.0+1
+
+  # Image Handling
+  image_picker: ^1.1.2
+  image: ^4.2.0
+  path_provider: ^2.1.4
+  path: ^1.9.0
+
+  # Image Caching
+  cached_network_image: ^3.4.1
+
+  # Audio Recording
+  record: ^5.0.0
+  audioplayers: ^5.0.0
+
+  # Utilities
+  uuid: ^4.5.1
+  timeago: ^3.7.0
+
+  # Charts
+  fl_chart: ^0.69.0
+  nested: ^1.0.0
+
+  # Calendar & Visualization
+  table_calendar: ^3.1.2 # Monthly calendar view
+  flutter_heatmap_calendar: ^1.0.5 # GitHub-style heatmap
+  flutter_native_splash: ^2.4.7
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +104,26 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
+  # Linting
+  very_good_analysis: ^5.1.0
+
+  # Code Generation
+  build_runner: ^2.4.0
+
+  # Testing
+  mockito: ^5.4.0
+  integration_test:
+    sdk: flutter
+
+  # Isar Code Generation (removed for now)
+  # isar_generator: ^3.0.0
+
+  # Launcher Icons
+  flutter_launcher_icons: ^0.14.4
+
+  # Flavors (removed for simple app)
+  # flutter_flavorizr: ^2.4.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -56,6 +134,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
+
+  assets:
+    - assets/
+
+dependency_overrides:
+  # Fix compile error: record_linux 0.7.x is incompatible with record_platform_interface >=1.4.0
+  # Bump to a compatible version to satisfy the new startStream API
+  record_linux: ^1.2.1
 
   # To add assets to your application, add an assets section, like this:
   # assets:
