Add Firebase configuration files, create .env.example for environment variables, and update Firebase setup documentation. Enhance Firebase options retrieval in code to ensure secure handling of credentials.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,11 @@ migrate_working_dir/
 .env.local
 .env.*.local
 
+# Firebase configuration files
+# Note: GoogleService-Info.plist is needed for iOS Google Sign-In
+# Only ignore Android config as we use .env for both platforms
+**/google-services.json
+
 # Symbolication related
 app.*.symbols
 
