Update dependencies in pubspec.yaml and pubspec.lock for json_annotation and json_serializable. Introduce new models for context, output, project, and thought, along with their respective serialization logic. Add a registry for prompt definitions to enhance context processing capabilities.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   logger: ^2.5.0
   equatable: ^2.0.5
+  json_annotation: ^4.9.0
 
   # Network
   dio: ^5.7.0
@@ -109,6 +110,7 @@ dev_dependencies:
 
   # Code Generation
   build_runner: ^2.4.0
+  json_serializable: ^6.8.0
 
   # Testing
   mockito: ^5.4.0
