Add Google AI integration with new services for context enhancement, output generation, and transcription. Update dependencies in pubspec.yaml and pubspec.lock for google_generative_ai. Implement providers and controllers to replace dummy services, ensuring all functionality remains intact. Add microphone permissions in Info.plist for audio recording capabilities.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,5 +56,9 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone to record audio thoughts</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need access to speech recognition to transcribe your audio thoughts</string>
 </dict>
 </plist>
